--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
     background-image: url("../images/subtle_white_mini_waves.png");
     line-height: 1.3;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #7777
 }
 
 header, h1, h2{
